--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ url: 'https://wjh51333.github.io/'
 
 author: JEEHYUN_WOO                  # change to your full name
 
-avatar: /assets/img/sample/avatar.jpg   # support internet resources
+avatar: /assets/img/snoopy.jpg   # support internet resources
 
 github:
   username: wjh51333             # change to your github username
@@ -49,7 +49,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Asia/Seoul
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
